third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/no-comma-2.stderr
TOML parse error at line 1, column 31
  |
1 | arrr = { comma-missing = true valid-toml = false }
  |                               ^
invalid inline table
expected `}`
